--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ fullSection related
 .content .smallImage{
   display:block;
   margin: 40px auto; 
-  max-width: 700px;  /*todo*/
+  width: 80%;
 }
 
 
@@ -515,6 +515,7 @@ bottom: 0px;
             50% { opacity:0; }
             100% { opacity:1; }
         }
+
 
 /*
 **************************
